[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/gui/png/1.png" type="Texture" id=1]
[ext_resource path="res://Background/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fuentes/Candy_Randy/candyrandy.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fuentes/Bacarde/barcadesemital.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fuentes/JosefinSans-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/gui/botones/reiniciar_verde.png" type="Texture" id=6]
[ext_resource path="res://assets/gui/botones/reiniciar_rojo.png" type="Texture" id=7]
[ext_resource path="res://assets/gui/botones/reiniciar_azul.png" type="Texture" id=8]
[ext_resource path="res://assets/gui/botones/menu_azul.png" type="Texture" id=9]
[ext_resource path="res://assets/gui/botones/menu_verde.png" type="Texture" id=10]
[ext_resource path="res://assets/gui/botones/menu_rojo.png" type="Texture" id=11]
[ext_resource path="res://GUI/gui_pantallas/game_over.gd" type="Script" id=12]
[ext_resource path="res://SoundEffects/Ambiente/Game over screen.ogg" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=1]
size = 57
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 3
outline_color = Color( 0.584314, 0.160784, 0.152941, 1 )
extra_spacing_char = 6
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 55
font_data = ExtResource( 4 )

[node name="pantalla_go" type="Node2D"]
script = ExtResource( 12 )

[node name="background" parent="." instance=ExtResource( 2 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 503.452, 294.685 )
scale = Vector2( 0.729853, 0.744725 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = -199.935
margin_top = -277.048
margin_right = 196.065
margin_bottom = -213.048
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.870588, 0.705882, 0.584314, 1 )
text = "PERDISTE...! :("
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 269.824
margin_top = 246.073
margin_right = 497.824
margin_bottom = 290.073
rect_pivot_offset = Vector2( 87.705, 107.444 )
custom_fonts/font = SubResource( 2 )
text = "Tu Puntaje:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 262.287
margin_top = 354.602
margin_right = 518.287
margin_bottom = 398.602
rect_pivot_offset = Vector2( 87.705, 107.444 )
custom_fonts/font = SubResource( 2 )
text = "Mejor Puntaje:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txt_score" type="Label" parent="."]
margin_left = 536.551
margin_top = 223.0
margin_right = 727.551
margin_bottom = 292.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.227451, 0.392157, 0.8, 1 )
text = "(12345)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txt_best" type="Label" parent="."]
margin_left = 532.985
margin_top = 328.478
margin_right = 723.985
margin_bottom = 397.478
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.145098, 0.482353, 0.176471, 1 )
text = "(12345)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="TextureButton" parent="."]
margin_left = 315.034
margin_top = 429.592
margin_right = 423.034
margin_bottom = 537.592
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reiniciar" type="TextureButton" parent="."]
margin_left = 545.657
margin_top = 428.085
margin_right = 653.657
margin_bottom = 536.085
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_over_theme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
autoplay = true
[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="reiniciar" to="." method="_on_reiniciar_pressed"]
